@@ -4,6 +4,7 @@ X-editable-yii changelog
 
 Version 1.1.0  wip
 ----------------------------
+[enh #9] support for namespaced models (vitalets)
 [enh] updated to x-editable 1.4.4: added combodate and select2 (vitalets)
 [enh #16] EditableDetailView defaults + french translation (mdeweerd) 
 [bug] If apply = true, attribute can be unsafe (vitalets)
